Fixed unresponsive collapsed navbar + added fallback fonts

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding-left: 1vw;
   padding-right: 1vw;
-  font-family: "American Typewriter";
+  font-family: 'American Typewriter', 'Courier New', Courier, monospace;
 }
 
 .btn {
